--- a/app/src/main/res/layout/cloud_document.xml
+++ b/app/src/main/res/layout/cloud_document.xml
@@ -4,57 +4,62 @@
     android:background="@android:color/white">
 
     <TextView
-        android:layout_width="300dp"
-        android:layout_height="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="90dp"
         android:text="ドキュメント"
         android:id="@+id/documenttextView"
+        android:textSize="55dp"
+        android:textColor="@android:color/black"
+        android:gravity="center"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="45dp"
-        android:textColor="@android:color/black"
-        android:gravity="center" />
+        android:layout_marginTop="15dp" />
 
     <ImageView
         android:layout_width="90dp"
-        android:layout_height="70dp"
+        android:layout_height="90dp"
         android:id="@+id/returnView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@mipmap/return_100" />
+        android:src="@mipmap/return_100"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:onClick="onClick" />
 
     <ImageView
         android:layout_width="90dp"
-        android:layout_height="65dp"
+        android:layout_height="90dp"
         android:id="@+id/homeView"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:src="@mipmap/home_100" />
+        android:src="@mipmap/home_100"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:onClick="onClick" />
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="15px"
+        android:layout_height="15dp"
         android:id="@+id/blacklineView"
         android:src="@mipmap/dot_black"
         android:scaleType="fitXY"
-        android:layout_below="@+id/documenttextView"
+        android:layout_below="@+id/homeView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="570dp"
         android:layout_height="85dp"
-        android:layout_below="@+id/blacklineView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp"
         android:baselineAligned="false"
         android:background="@drawable/layout_shape"
-        android:id="@+id/linearLayout9">
+        android:id="@+id/linearLayout9"
+        android:layout_below="@+id/blacklineView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -65,7 +70,8 @@
             android:gravity="center"
             android:textSize="40dp"
             android:textColor="#ff007cff"
-            android:background="@drawable/layout_shape" />
+            android:background="@drawable/layout_shape"
+            android:onClick="onClick" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,7 +82,8 @@
             android:gravity="center"
             android:textSize="40dp"
             android:textColor="#ff007cff"
-            android:background="@drawable/layout_shape" />
+            android:background="@drawable/layout_shape"
+            android:onClick="onClick" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -87,7 +94,8 @@
             android:textSize="40dp"
             android:gravity="center"
             android:textColor="@android:color/white"
-            android:background="@drawable/layout_line" />
+            android:background="@drawable/layout_line"
+            android:onClick="onClick" />
     </LinearLayout>
 
     <ImageView
@@ -161,7 +169,8 @@
                 android:id="@+id/cloudView"
                 android:layout_weight="1.5"
                 android:src="@mipmap/download_from_cloud_100"
-                android:scaleType="fitXY" />
+                android:scaleType="fitXY"
+                android:onClick="onClick" />
 
         </LinearLayout>
 
@@ -240,7 +249,8 @@
                 android:id="@+id/cloudView2"
                 android:layout_weight="1.5"
                 android:src="@mipmap/download_from_cloud_100"
-                android:scaleType="fitXY" />
+                android:scaleType="fitXY"
+                android:onClick="onClick" />
         </LinearLayout>
 
         <ImageView
@@ -398,7 +408,8 @@
                 android:id="@+id/cloudView3"
                 android:layout_weight="1.5"
                 android:src="@mipmap/download_from_cloud_100"
-                android:scaleType="fitXY" />
+                android:scaleType="fitXY"
+                android:onClick="onClick" />
         </LinearLayout>
 
         <ImageView
@@ -420,6 +431,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:src="@mipmap/plusfield" />
+        android:src="@mipmap/plusfield"
+        android:onClick="onClick" />
 
 </RelativeLayout>
