--- a/app/src/main/res/layout/cloud_drive_inside.xml
+++ b/app/src/main/res/layout/cloud_drive_inside.xml
@@ -4,54 +4,60 @@
     android:background="@android:color/white">
 
     <TextView
-        android:layout_width="320dp"
-        android:layout_height="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:text="GoogleDrive"
         android:id="@+id/drivetextView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="50dp"
+        android:textSize="60dp"
         android:textColor="@android:color/black"
-        android:gravity="center" />
+        android:layout_centerHorizontal="true"
+        android:gravity="center_vertical"
+        android:layout_alignBottom="@+id/blacklineView" />
 
     <ImageView
         android:layout_width="90dp"
-        android:layout_height="70dp"
+        android:layout_height="90dp"
         android:id="@+id/returnView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@mipmap/return_100" />
+        android:src="@mipmap/return_100"
+        android:onClick="onClick"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp" />
 
     <ImageView
         android:layout_width="90dp"
-        android:layout_height="65dp"
+        android:layout_height="90dp"
         android:id="@+id/homeView"
-        android:layout_alignParentTop="true"
+        android:src="@mipmap/home_100"
+        android:onClick="onClick"
+        android:layout_above="@+id/blacklineView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:src="@mipmap/home_100" />
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="10dp" />
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="15px"
+        android:layout_height="15dp"
         android:id="@+id/blacklineView"
         android:src="@mipmap/dot_black"
         android:scaleType="fitXY"
-        android:layout_below="@+id/drivetextView"
+        android:layout_below="@+id/returnView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="450dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/blacklineView"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentStart="true"
         android:layout_alignWithParentIfMissing="false"
+        android:id="@+id/linearLayout17"
+        android:layout_below="@+id/blacklineView"
         android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout17">
+        android:layout_marginTop="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -88,12 +94,11 @@
         android:orientation="horizontal"
         android:layout_width="530dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/linearLayout17"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentStart="true"
-        android:layout_centerHorizontal="true"
         android:background="@drawable/layout_shape"
-        android:id="@+id/linearLayout18">
+        android:id="@+id/linearLayout18"
+        android:layout_below="@+id/linearLayout17"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -113,11 +118,11 @@
         android:layout_width="fill_parent"
         android:layout_height="10dp"
         android:id="@+id/graylineView"
+        android:background="@android:color/darker_gray"
         android:layout_below="@+id/linearLayout18"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="@android:color/darker_gray"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="20dp" />
 
     <ImageView
         android:layout_width="100dp"
@@ -126,16 +131,17 @@
         android:src="@mipmap/plusfield"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="onClick" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="560dp"
+        android:layout_above="@+id/plusView"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/graylineView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_margin="25dp">
+        android:layout_marginTop="35dp">
 
         <LinearLayout
             android:orientation="vertical"
@@ -148,7 +154,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/photoimageView"
                 android:layout_weight="3"
-                android:src="@mipmap/picture_100" />
+                android:src="@mipmap/picture_100"
+                android:onClick="onClick" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -163,19 +170,21 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/movieimageView"
+                android:id="@+id/musicimageView"
+                android:src="@mipmap/musical_notes_100"
                 android:layout_weight="3"
-                android:src="@mipmap/video_file_100" />
+                android:onClick="onClick" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="動画"
-                android:id="@+id/movietextView"
+                android:text="音楽"
+                android:id="@+id/musictextView"
                 android:layout_weight="1"
-                android:textColor="@android:color/black"
                 android:textSize="45dp"
+                android:textColor="@android:color/black"
                 android:gravity="center" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -187,9 +196,29 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/movieimageView"
+                android:layout_weight="3"
+                android:src="@mipmap/video_file_100"
+                android:onClick="onClick"
+                android:scaleType="fitCenter" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="動画"
+                android:id="@+id/movietextView"
+                android:layout_weight="1"
+                android:textColor="@android:color/black"
+                android:textSize="45dp"
+                android:gravity="center" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/documentimageView"
                 android:src="@mipmap/document_100"
-                android:layout_weight="3" />
+                android:layout_weight="3"
+                android:onClick="onClick" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -201,22 +230,6 @@
                 android:textSize="45dp"
                 android:gravity="center" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/musicimageView"
-                android:src="@mipmap/musical_notes_100"
-                android:layout_weight="3" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="音楽"
-                android:id="@+id/musictextView"
-                android:layout_weight="1"
-                android:textSize="45dp"
-                android:textColor="@android:color/black"
-                android:gravity="center" />
         </LinearLayout>
     </LinearLayout>
 
