--- a/app/src/main/res/layout/cloud_movie_list.xml
+++ b/app/src/main/res/layout/cloud_movie_list.xml
@@ -1,60 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:onClick="onClick">
 
     <TextView
-        android:layout_width="120dp"
-        android:layout_height="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="90dp"
         android:text="動画"
         android:id="@+id/drivetextView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="50dp"
+        android:textSize="55dp"
         android:textColor="@android:color/black"
-        android:gravity="center_horizontal" />
+        android:layout_above="@+id/blacklineView"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_vertical" />
 
     <ImageView
         android:layout_width="90dp"
-        android:layout_height="70dp"
+        android:layout_height="90dp"
         android:id="@+id/returnView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@mipmap/return_100" />
+        android:src="@mipmap/return_100"
+        android:onClick="onClick"
+        android:layout_marginTop="10dp" />
 
     <ImageView
         android:layout_width="90dp"
-        android:layout_height="65dp"
+        android:layout_height="90dp"
         android:id="@+id/homeView"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:src="@mipmap/home_100" />
+        android:src="@mipmap/home_100"
+        android:onClick="onClick"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp" />
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="15px"
+        android:layout_height="15dp"
         android:id="@+id/blacklineView"
         android:src="@mipmap/dot_black"
         android:scaleType="fitXY"
-        android:layout_below="@+id/drivetextView"
+        android:layout_below="@+id/homeView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="570dp"
         android:layout_height="85dp"
-        android:layout_below="@+id/blacklineView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp"
         android:baselineAligned="false"
         android:background="@drawable/layout_shape"
-        android:id="@+id/linearLayout9">
+        android:id="@+id/linearLayout9"
+        android:layout_below="@+id/blacklineView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -65,7 +69,8 @@
             android:textSize="35dp"
             android:textColor="#ff007cff"
             android:background="@drawable/layout_shape"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="onClick" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,7 +81,8 @@
             android:textSize="35dp"
             android:textColor="#ff007cff"
             android:background="@drawable/layout_shape"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="onClick" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -87,7 +93,8 @@
             android:gravity="center"
             android:textColor="@android:color/white"
             android:background="@drawable/layout_line"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="onClick" />
 
     </LinearLayout>
 
@@ -163,7 +170,8 @@
             android:layout_height="match_parent"
             android:id="@+id/cloudView"
             android:layout_weight="2"
-            android:src="@mipmap/download_from_cloud_100" />
+            android:src="@mipmap/download_from_cloud_100"
+            android:onClick="onClick" />
     </LinearLayout>
 
     <ImageView
@@ -259,7 +267,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:src="@mipmap/plusfield" />
+        android:src="@mipmap/plusfield"
+        android:onClick="onClick" />
 
 
 
