--- a/app/src/main/res/layout/cloud_photo_thumbs.xml
+++ b/app/src/main/res/layout/cloud_photo_thumbs.xml
@@ -1,36 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:onClick="onClick">
 
     <TextView
-        android:layout_width="120dp"
-        android:layout_height="70dp"
+        android:layout_width="wrap_content"
+        android:layout_height="90dp"
         android:text="写真"
         android:id="@+id/phototextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="50dp"
+        android:textSize="55dp"
         android:textColor="@android:color/black"
-        android:gravity="center_horizontal" />
+        android:gravity="center"
+        android:layout_marginTop="15dp" />
 
     <ImageView
         android:layout_width="90dp"
-        android:layout_height="70dp"
+        android:layout_height="90dp"
         android:id="@+id/returnView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@mipmap/return_100" />
+        android:src="@mipmap/return_100"
+        android:onClick="onClick"
+        android:layout_marginTop="10dp" />
 
     <ImageView
         android:layout_width="90dp"
-        android:layout_height="65dp"
+        android:layout_height="90dp"
         android:id="@+id/homeView"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:src="@mipmap/home_100" />
+        android:src="@mipmap/home_100"
+        android:onClick="onClick"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -38,23 +45,21 @@
         android:id="@+id/blacklineView"
         android:src="@mipmap/dot_black"
         android:scaleType="fitXY"
-        android:layout_below="@+id/phototextView"
+        android:layout_below="@+id/homeView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="15dp" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="570dp"
         android:layout_height="85dp"
-        android:layout_below="@+id/blacklineView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="20dp"
         android:baselineAligned="false"
         android:background="@drawable/layout_shape"
-        android:id="@+id/linearLayout9">
+        android:id="@+id/linearLayout9"
+        android:layout_below="@+id/blacklineView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -65,7 +70,8 @@
             android:textSize="35dp"
             android:textColor="#ff007cff"
             android:background="@drawable/layout_shape"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="onClick" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -76,7 +82,8 @@
             android:textSize="35dp"
             android:textColor="#ff007cff"
             android:background="@drawable/layout_shape"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="onClick" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -87,7 +94,8 @@
             android:gravity="center"
             android:textColor="@android:color/white"
             android:background="@drawable/layout_line"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:onClick="onClick" />
 
     </LinearLayout>
 
@@ -102,46 +110,70 @@
         android:layout_marginTop="15dp"
         android:background="@android:color/darker_gray" />
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView3"
         android:layout_below="@+id/graylineView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_above="@+id/imageView20"
+        android:layout_marginTop="5dp">
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="140dp">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/graylineView"
+            android:layout_alignLeft="@+id/linearLayout9"
+            android:layout_alignStart="@+id/linearLayout9">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/imageView6"
-                android:layout_weight="1"
-                android:background="@android:color/black"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="250dp">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/imageView7"
-                android:layout_weight="1"
-                android:layout_margin="5dp"
-                android:background="@android:color/black" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/imageView6"
+                    android:layout_weight="1"
+                    android:background="@android:color/black"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:onClick="onClick" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/imageView8"
-                android:layout_weight="1"
-                android:background="@android:color/black"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/imageView7"
+                    android:layout_weight="1"
+                    android:layout_margin="5dp"
+                    android:background="@android:color/black"
+                    android:onClick="onClick" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/imageView8"
+                    android:layout_weight="1"
+                    android:background="@android:color/black"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:onClick="onClick" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/imageView20"
+        android:src="@mipmap/plusfield"
+        android:onClick="onClick"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp" />
 </RelativeLayout>
