--- a/app/src/main/res/layout/webbrows.xml
+++ b/app/src/main/res/layout/webbrows.xml
@@ -2,15 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/rl_web_top">
+    android:id="@+id/rl_webbrows_top">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/ll_web_ctrl"
-        android:id="@+id/fl_web_brows"
+        android:layout_above="@+id/ll_webbrows_ctrl"
+        android:id="@+id/fl_webbrows_brows"
         android:layout_alignParentTop="true"
         android:background="@android:color/white">
 
@@ -21,54 +21,118 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/ll_web_ctrl">
+        android:id="@+id/ll_webbrows_ctrl"
+        android:background="@android:color/white"
+        android:baselineAligned="false">
 
-        <ImageView
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/iv_webbrows_twitter"
-            android:src = "@mipmap/logo_twitter"
-            android:scaleType="fitCenter"
             android:layout_weight="1"
-            android:onClick="onClick" />
+            android:id="@+id/fl_webbrows_twitter">
 
-        <ImageView
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/iv_webbrows_twitter"
+                android:src = "@mipmap/logo_twitter"
+                android:scaleType="fitCenter"
+                android:layout_gravity="center" />
+
+            <ProgressBar
+                android:id="@+id/pb_webbrows_twitter"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                style="@android:style/Widget.ProgressBar"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/iv_webbrows_facebook"
-            android:src = "@mipmap/logo_facebook"
-            android:scaleType="fitCenter"
             android:layout_weight="1"
-            android:onClick="onClick" />
+            android:id="@+id/fl_webbrows_facebook" >
 
-        <ImageView
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/iv_webbrows_facebook"
+                android:src = "@mipmap/logo_facebook"
+                android:scaleType="fitCenter"
+                android:layout_gravity="center" />
+
+            <ProgressBar
+                style="@android:style/Widget.ProgressBar"
+                android:id="@+id/pb_webbrows_facebook"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/iv_webbrows_home"
-            android:src = "@mipmap/webbrows_home"
-            android:scaleType="fitCenter"
             android:layout_weight="1"
-            android:onClick="onClick" />
+            android:id="@+id/fl_webbrows_home" >
 
-        <ImageView
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/iv_webbrows_home"
+                android:src = "@mipmap/webbrows_home"
+                android:scaleType="fitCenter"
+                android:layout_gravity="center" />
+
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/iv_webbrows_mixi"
-            android:scaleType="fitCenter"
-            android:src="@mipmap/logo_mixi"
             android:layout_weight="1"
-            android:onClick="onClick" />
+            android:id="@+id/fl_webbrows_mixi" >
 
-        <ImageView
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/iv_webbrows_mixi"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/logo_mixi"
+                android:layout_gravity="center" />
+
+            <ProgressBar
+                style="@android:style/Widget.ProgressBar"
+                android:id="@+id/pb_webbrows_mixi"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/iv_webbrows_googleplus"
-            android:scaleType="fitCenter"
-            android:src="@mipmap/logo_googleplus"
             android:layout_weight="1"
-            android:onClick="onClick" />
+            android:id="@+id/fl_webbrows_googleplus" >
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/iv_webbrows_googleplus"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/logo_googleplus"
+                android:layout_gravity="center" />
+
+            <ProgressBar
+                style="@android:style/Widget.ProgressBar"
+                android:id="@+id/pb_webbrows_googleplus"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+        </FrameLayout>
 
     </LinearLayout>
 
